apps/litomi/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litomi-backend
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: litomi-backend
  template:
    metadata:
      labels:
        app: litomi-backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: litomi-backend
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: litomi-backend
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: litomi-backend
      containers:
        - name: backend
          image: litomi-backend:prod
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 10
          volumeMounts:
            - name: google-identity-token
              mountPath: /var/run/service-account
              readOnly: true
            - name: google-application-credentials
              mountPath: /etc/workload-identity
              readOnly: true
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 640Mi
            limits:
              cpu: 500m
              memory: 896Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: google-identity-token
          projected:
            sources:
              - serviceAccountToken:
                  audience: https://iam.googleapis.com/projects/63417037891/locations/global/workloadIdentityPools/litomi-k3s-pool/providers/litomi-k3s-oidc
                  expirationSeconds: 3600
                  path: token
        - name: google-application-credentials
          configMap:
            name: litomi-backend-google-credentials
