apps/litomi/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litomi-backend
spec:
  selector:
    app: litomi-backend
  ports:
    - name: http
      port: 3002
      targetPort: http
