apps/litomi/backend/networkpolicy-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: litomi-backend-ingress
spec:
  podSelector:
    matchLabels:
      app: litomi-backend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: 3002
    - from:
        - podSelector:
            matchLabels:
              app: litomi-web
      ports:
        - port: 3002
